# fast-bible

./: README.md  debug.sh  features_todo.md  pyproject.toml  run.sh  scraper.py  test.html
app/: __init__.py
app/db/: __init__.py  bible.py
app/routers/: __init__.py  books.py  index.py
data/: bible.db  db.py
data/bible/: bible.db  books.json  db.py  models.py  notes.db  schema.sql
scraper/: __main__.py
