[tool.poetry]
name = "fast-bible"
version = "0.1.0"
description = ""
authors = ["David Rivero <davidmiguel22573@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
sqlalchemy = "^2.0.31"
pyperclip = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
