[tool.poetry]
name = "fast-bible"
version = "0.1.0"
description = ""
authors = ["davidmiguel22573 <davidmiguel22573@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
